# backend/docs/swagger.json
@@ -161,7 +161,7 @@
                 "responses": {}
             }
         },
-        "/health-metrics": {
+        "/health-metric/save": {
             "post": {
                 "security": [
                     {
@@ -619,8 +619,7 @@
                     "type": "string"
                 },
                 "value": {
-                    "type": "number",
-                    "format": "float64"
+                    "type": "number"
                 }
             }
         },
@@ -651,10 +650,12 @@
                     "type": "object",
                     "properties": {
                         "diastolic": {
-                            "type": "integer"
+                            "type": "integer",
+                            "example": 80
                         },
                         "systolic": {
-                            "type": "integer"
+                            "type": "integer",
+                            "example": 120
                         }
                     }
                 },
@@ -663,25 +664,30 @@
                 },
                 "calories": {
                     "description": "kcal burned/consumed",
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 2200
                 },
                 "heart_rate": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 72
                 },
                 "notes": {
                     "type": "string"
                 },
                 "oxygen_level": {
                     "description": "SpO2 (%)",
-                    "type": "number"
+                    "type": "number",
+                    "example": 98
                 },
                 "sleep_hours": {
                     "description": "hours (e.g., 7.5)",
-                    "type": "number"
+                    "type": "number",
+                    "example": 7.5
                 },
                 "steps": {
                     "description": "daily steps",
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 8500
                 },
                 "weight": {
                     "$ref": "#/definitions/models.Measurement"
